# AutonomousTrike

./: .gitignore  .gitmodules  Dockerfile  README.md  README_Hardware.md  README_Software.md  basic_servo_braking.ino  braking_driver.cpp  braking_encoder.cpp  startup.sh  trike.repos
Arduino/: brakes_with_lights.cpp  braking_control.cpp  braking_control.ino  braking_encoder.cpp  encoder_steering.cpp  encoder_steering.ino  key_fob.ino  steering_control.ino
FastSAM/: README.md  segpredict.py
FastSAM/ultralytics/: base
Models/: dataCollectionOakD.py
Models/FastSAM/: README.md  liveinterference.py
Models/SAM2/: README.md
Models/vint/src/: carla_vint.py  collect_data.py  dataset.py  deep_train.py  slim_train.py  train.py
Models/visualnav-transformer/deployment/src/: navigate.sh
Motor Controller/: MCTets_jetson.py
MotorController/: MCTets_jetson copy.py  MCTets_jetson.py  MotorControllerTest_feb.ino  steering_motor.ino  steering_w_ros.ino
MotorController/steering_w_ros/: steering_w_ros.ino
SAM2/: README.md
SAM2/scripts/: videopredictor.py  videopredictor.py~
SAM2/scripts/oldscripts/: videopredictor.py
SCA/: SCA_classes.py  autonomous.py  config.yaml  docker_command.txt  emergency_brake.py  run.py  test_tcp_server.py
ViNT/visualnav-transformer/deployment/config/: robot.yaml
arduino/: braking_control.ino  key_fob.ino  old_steering.ino  steering_control.ino
arduino/steering_control/: steering_control.ino
docs/hardware/: ShaftCollar.SLDPRT  SteeringMount.SLDPRT
docs/reports/: 1st Semester Prototype Plan.docx  1st Semester Prototype Report.docx  2nd Semester Prototype Plan.docx  2nd Semester Prototype Report.docx  Final Testing Plan.docx  Final Testing Report.docx
docs/schematics/: CombinedWiring.kicad_sch
fastsam/: prompt.py
ros2_ws/src/common_utils/: CMakeLists.txt  package.xml
ros2_ws/src/common_utils/include/common_utils/: image_constants.hpp
ros2_ws/src/control_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/control_cpp/include/control_cpp/: CKeyboardOperation.h  CMotorCommand.h  NRobotModel.h  pid.h  robot_model.h
ros2_ws/src/control_cpp/src/: CKeyboardOperation.cpp  CMotorCommand.cpp  NRobotModel.cpp  controller_line.cpp  key_op.cpp  motor_command.cpp
ros2_ws/src/example_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/navigation_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/perception_py/: package.xml  setup.py
ros2_ws/src/perception_py/perception_py/: fast_sam.py
ros2_ws/src/realsense2_camera/: CMakeLists.txt
ros2_ws/src/sensors_cpp/: CMakeLists.txt
ros2_ws/src/trike_msgs/: CMakeLists.txt
scripts/: capture_rgbd.py  carla_control_node.py  depth_segmentation.ipynb  ros_bad_driver.py  ros_listener.py
src/control_cpp/: CMakeLists.txt  package.xml
src/depthai-ros/my_scripts/: emergency_stop.py
src/sensors_cpp/: package.xml
src/tester/: package.xml  setup.py
src/tester/tester/: brake_command.py  emergency_stop.py  key_op.py  map_routing.py  voice_navigation.py
src/tester/tester/for_ssh/: depth.npy  rgb.npy
src/trike/: CMakeLists.txt  package.xml  play_audio_node.py
src/trike/config/: README.md
src/trike/include/trike/: constants.hpp
src/trike/launch/: main_launch.py  robot.launch.py  robot_description_launch.py  robot_headless_launch.py  robot_state_publisher.launch.py  trike_launch.py
src/trike/map/: segmented_left_turn.yaml
src/trike/scripts/: segment_map.py
src/trike/src/: my_node.cpp  servo_controller.cpp  steering_controller.cpp
src/trike/src/audio/: audio_player.py
src/trike/src/controller/: data_manager.cpp  mode_manager.py
src/trike/src/embedded/: servo_controller.cpp  steering_controller.cpp
src/trike/src/key_op/: key_op2.py
src/trike/src/navigation/: image_segment.py
src/trike/src/perception/: README.md
src/trike/src/util/: README.md
src/trike/test/: SCA_client.py  led_test.py
src/trike/urdf/: README.md  rover.urdf.xacro  trike.urdf  trike.urdf.xacro
src/trike_msgs/: package.xml
trike/: CMakeLists.txt  package.xml
trike/audio/: speech_to_text_node.py
trike/include/trike/: constants.hpp
trike/launch/: key_op_launch.py  main_launch.py  spawn_robot.launch.py  trike_launch.py
trike/map/: segmented_left_turn.yaml
trike/msg/: README.md
trike/param/: trike.yaml
trike/scripts/: resample.py  voices.py
trike/src/audio/: audio_player.py  speech_to_text.py
trike/src/controller/: controller.py  controller_line.py  mode_manager.py
trike/src/data/: data_manager.cpp  twist_to_steer.cpp
trike/src/embedded/: README.md  servo_controller.cpp  steering_controller.cpp
trike/src/image_processing/: image_processing.py
trike/src/key_op/: key_op.py  key_op2.py
trike/src/localization/: README.md  vn200_relay.cpp
trike/src/navigation/: README.md  controller_line.py
trike/src/networking/: ros_get_from_docker.py  ros_send_into_docker.py  ros_tcp_server.py
trike/src/perception/: emergency_stop.py  image_segment.py
trike/src/robot_model/: robot_model.py
trike/srv/: README.md
trike/test/: image_segment_test.py  map_routing_demo.py  mode_switch.py  play_audio.py  trajectory_planning_demo.py
trike/test/carla_scripts/: carla_control_node.py  view_of_vehicle.py
trike/urdf/: ackerman.urdf  ackerman.xacro  box.urdf.xacro  gem.xacro  rover.urdf
