<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="colerezi30@gmail.com">coler</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- <exec_depend>fastsam</exec_depend> -->
  <!-- <exec_depend>fastsam</exec_depend> -->
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>segment-anything-fast</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>opencv-python</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
